Conf files fixes

--- a/services/healthy.conf
+++ b/services/healthy.conf
@@ -1,6 +1,6 @@
 SERVICE_NAME=healthy
 PROGRAM=/usr/bin/python3
 RUN_ARGS=/tmp/server.py /health 8001 1
-HEALTH_ENDPOINT=/api/health
+HEALTH_ENDPOINT=/health
 PORT=8001
 ENABLED=true
